// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Float/Tooltip Basic smoke-test 1`] = `
<button type="button"
        class="cmpui_button"
        data-state="closed"
        data-variant="primary"
        data-size="M"
>
  Tooltip
</button>
`;

exports[`Float/Tooltip Multiple smoke-test 1`] = `
<div style="display: flex;">
  <button type="button"
          class="cmpui_icon-button__root"
          data-size="M"
          data-state="closed"
  >
    A
  </button>
  <button type="button"
          class="cmpui_icon-button__root"
          data-size="M"
          data-state="closed"
  >
    B
  </button>
  <button type="button"
          class="cmpui_icon-button__root"
          data-size="M"
          data-state="closed"
  >
    C
  </button>
</div>
`;

exports[`Float/Tooltip Presenter smoke-test 1`] = `
<div class="cmpui_tooltip__root">
  Hello, World!
</div>
`;
